<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="layout.AddCareerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/createCareerLayout"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameCareerField"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/distanceCareerField"
            android:hint="@string/distance"
            android:imeOptions="actionNext"
            android:layout_below="@id/nameCareerField"
            android:inputType="textNoSuggestions"
            android:digits="0123456789"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/placeCreerField"
            android:hint="@string/place"
            android:imeOptions="actionNext"
            android:layout_below="@id/distanceCareerField"
            android:inputType="textNoSuggestions"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateCareerField"
            android:hint="@string/date"
            android:imeOptions="actionNext"
            android:layout_below="@id/placeCreerField"
            android:inputType="textNoSuggestions"
            />



    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/confirmCreateCLayout"
        android:gravity="center|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/registerButton"
            android:layout_alignParentBottom="true"
            android:onClick="onClickAddCareer"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comeBack"
            android:layout_toRightOf="@id/registerButton"
            android:id="@+id/backRegisterButton"
            android:onClick="onClickBack"
            android:layout_alignParentBottom="true"
            />

    </RelativeLayout>

</FrameLayout>
