<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="lab2apprun.gr8.compumovil.udea.edu.co.lab2apprun.LoginActivity">


    <RelativeLayout
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/principalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <EditText
            android:id="@+id/userLoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logUser"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"
            android:digits="abcdefghijklmnopqrstuvwxyz"
            />
        <EditText
            android:id="@+id/passwordLoginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/logPass"
            android:imeOptions="actionNext"
            android:layout_below="@+id/userLoginField"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rememberLoginCheckbox"
            android:text="@string/checkRemem"
            android:layout_below="@id/passwordLoginField"
            />
        
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/principalLayout"
        android:id="@+id/loginConfirmLayout"
        android:gravity="bottom|center_horizontal"
        >

        <Button
            android:id="@+id/loginSessionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log"
            android:onClick="onClickLogin"
            />
        <Button
            android:id="@+id/registerLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logRegister"
            android:onClick="onClickRegister"
            android:layout_toRightOf="@+id/loginSessionButton"
            />

    </RelativeLayout>


</RelativeLayout>
